fix landing page distortion

--- a/src/assets/scss/components/_home_about.scss
+++ b/src/assets/scss/components/_home_about.scss
@@ -1,8 +1,8 @@
 @import "../variables";
 
 .home_about {
-    display: flex;
-    flex-direction: row;
+    // display: flex;
+    // flex-direction: row;
     // margin-top: 100px;
     // margin-bottom: 100px;
     // border: 1px solid black;
